--- a/index.html
+++ b/index.html
@@ -74,10 +74,22 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>###**Check Your Sources**</h2>
+									<p>
+
+									Recently, I had the chance to meet with a local police officer on the campus of Virginia Tech and discuss sex trafficking in the context of college campuses, and the general southwest Virginia region. Officer Babb sat across the conference table, stiff in his blue uniform and his badge reflecting light without even an oily fingerprint.
+
+									Recently, around campus, people had been circulating a story about a woman who came to their doors at night, following them from downtown or from campus and knocking on the door to exclaim that she had been attacked, raped, or in some type of vague accident. What followed, if you let her into your home, would be a kidnapping. A male accomplice was close by, would enter your home after you were preoccupied with helping the woman and attack you.
+
+									Suddenly, you are swept into the underworld of human trafficking. However, rumors like this are rarely reality. As I found out, Officer Babb informed me that college campuses are not usually a huge target for sex trafficking recruiters, rather victims are subdued in much subtler ways. Usually, immigrants are targeted, people who are alienated from society — those who are placed on the fringes of healthy social interactions, who would not be largely noticed as missing, and most likely whose family would lack the resources and knowledge to seek the necessary help for an investigation.
+
+									Because of our use of social media and the significant role the internet plays in our social spheres, the circulation of false facts are widespread and we encounter the logical fallacy of jumping on the bandwagon without really fact-checking and digging through the sources of an article or story that we might have read.
+
+									This actually creates an unnerving shield for the recruiters who are actually using social media to victimize vulnerable youth and young women. Officer Babb explained that recruiters will track seemingly vulnerable people on social media websites and start using manipulative psychological tactics, eventually luring the victim into a place of further vulnerability and a feeling of hopelessness and loneliness.
+
+									Despite the danger that Officer Babb discussed with me, he was adamant about the importance of police involvement no matter the feelings that a possible 911-caller might have. I mean this in the sense that if you see something that does not quite feel right to you, or even if you are not sure that something is a ‘big-deal’ just _call_, because if something does end up being serious and could have been prevented, **the guilt of that can haunt you for life**.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#" class="button">[Learn more](https://medium.com/@jsteck98/check-your-sources-943b358f8893)</a></li>
 									</ul>
 								</div>
 							</div>
