--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
 							<p></p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="fa fa-ravelry" aria-hidden="true"></span>
+									<h3>Hope for Justice</h3>
+									<p>Freedom, justice, empathy, and passion.</p>
+									<li><a href="(http://hopeforjustice.org/aboutus/)" class="button">Help the fight</a></li>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<h3>Out of Darkness</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
