icon change again
another attempt at changing icons

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<p></p>
 							<div class="features">
 								<section>
-									<span class="fa fa-ravelry" aria-hidden="true"></span>
+									<span class="icon major fa-ravelry"></span>
 									<h3>Hope for Justice</h3>
 									<p>Freedom, justice, empathy, and passion.</p>
 									<li><a href="(http://hopeforjustice.org/aboutus/)" class="button">Help the fight</a></li>
