--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#one">Read about the crimes</a></li>
+							<li><a href="#two">Get Involved</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -95,40 +95,28 @@
 							<p></p>
 							<div class="features">
 								<section>
-									<i class="fa fa-ravelry" aria-hidden="true"></i>
+									<span class="icon major fa-globe"></span>
 									<h3>Hope for Justice</h3>
 									<p>Freedom, justice, empathy, and passion.</p>
-									<li><a href="(http://hopeforjustice.org/aboutus/)" class="button">Help the fight</a></li>
+									<a href="(http://hopeforjustice.org/aboutus/)" class="button">Help the fight Hope</a>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="icon major fa-sun-o"></span>
 									<h3>Out of Darkness</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<span class="icon major fa-film"></span>
+									<h3>Education through Film</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
+									<span class="icon major fa-universal-access"></span>
+									<h3>National Human Trafficking Hotline</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
+						
 						</div>
 					</section>
 
