--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 							<p>Join the Discussion About Human Sex-Trafficking</p>
 							<ul class="actions">
 								<li><a href="https://medium.com/@jsteck98" class="button scrolly">check out my medium website here</a></li>
+								<li><a href="https://www.youtube.com/watch?v=yAqW0w14hDE&t=2s" class="button scrolly">Human Trafficking in Blacksburg</a></li>
 							</ul>
 						</div>
 					</section>
@@ -116,7 +117,7 @@
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
-						
+
 						</div>
 					</section>
 
