--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Read about the crimes</a></li>
-							<li><a href="#two">Get Involved</a></li>
+							<li><a href="#two">Education and Involvement</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
@@ -92,7 +92,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>How to Get Involved</h2>
+							<h2>Education and Involvement</h2>
 							<p></p>
 							<div class="features">
 								<section>
@@ -103,8 +103,8 @@
 								</section>
 								<section>
 									<span class="icon major fa-sun-o"></span>
-									<h3>Out of Darkness</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Podcast</h3>
+									<p>A brief discussion of sex trafficking ranging from the local sphere to the international fight for justice.</p>
 								</section>
 								<section>
 									<span class="icon major fa-film"></span>
