extra word "hope"
deleted word “hope” from button

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 									<span class="icon major fa-globe"></span>
 									<h3>Hope for Justice</h3>
 									<p>Freedom, justice, empathy, and passion.</p>
-									<a href="(http://hopeforjustice.org/aboutus/)" class="button">Help the fight Hope</a>
+									<a href="(http://hopeforjustice.org/aboutus/)" class="button">Help the fight</a>
 								</section>
 								<section>
 									<span class="icon major fa-sun-o"></span>
