youtube and podcast
updated youtube link, added podcast link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<p>Join the Discussion About Human Sex-Trafficking</p>
 							<ul class="actions">
 								<li><a href="https://medium.com/@jsteck98" class="button scrolly">check out my medium website here</a></li>
-								<li><a href="https://www.youtube.com/watch?v=yAqW0w14hDE&t=2s" class="button scrolly">Human Trafficking in Blacksburg</a></li>
+								<li><a href="https://www.youtube.com/watch?v=yAqW0w14hDE" class="button scrolly">Human Trafficking in Blacksburg</a></li>
 							</ul>
 						</div>
 					</section>
@@ -104,6 +104,7 @@
 									<span class="icon major fa-sun-o"></span>
 									<h3>Podcast</h3>
 									<p>A brief discussion of sex trafficking ranging from the local sphere to the international fight for justice.</p>
+									<a href="(https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00)" class="button">Listen Here</a>
 								</section>
 								<section>
 									<span class="icon major fa-film"></span>
