--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								<section>
 									<span class="icon major fa-sun-o"></span>
 									<h3>Podcast</h3>
-									<p>A brief discussion of sex trafficking ranging from the local sphere to the international fight for justice.</p>
+									<p>A brief discussion of sex trafficking and the struggle for justice.</p>
 									<a href="(https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00)" class="button">Listen Here</a>
 								</section>
 								<section>
