check your sources link
fixed link-removed parantheses

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										Spreading false information only helps sex trafficking recruiters evade the law.
 										</p>
 									<ul class="actions">
-										<li><a href="(https://medium.com/@jsteck98/check-your-sources-943b358f8893)" class="button">Click to read more</a></li>
+										<li><a href="https://medium.com/@jsteck98/check-your-sources-943b358f8893" class="button">Click to read more</a></li>
 									</ul>
 								</div>
 							</div>
