--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h1>James Steck</h1>
 							<p>Join the Discussion About Human Sex-Trafficking</p>
 							<ul class="actions">
-								<li><a href="https://medium.com/@jsteck98" class="button scrolly">check out my medium website here target="_blank"</a></li>
+								<li><a href="https://medium.com/@jsteck98" class="button scrolly">check out my medium website here</a>target="_blank"</li>
 								<li><a href="https://www.youtube.com/watch?v=yAqW0w14hDE" class="button scrolly">Human Trafficking in Blacksburg</a></li>
 							</ul>
 						</div>
