took away parentheses
fixed links

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 									<span class="icon major fa-globe"></span>
 									<h3>Hope for Justice</h3>
 									<p>Freedom, justice, empathy, and passion.</p>
-									<a href="(http://hopeforjustice.org/aboutus/)" class="button">Help the fight</a>
+									<a href="http://hopeforjustice.org/aboutus/" class="button">Help the fight</a>
 								</section>
 								<section>
 									<span class="icon major fa-sun-o"></span>
 									<h3>Podcast</h3>
 									<p>A brief discussion of sex trafficking and the struggle for justice.</p>
-									<a href="(https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00)" class="button">Listen Here</a>
+									<a href="https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00" class="button">Listen Here</a>
 								</section>
 								<section>
 									<span class="icon major fa-film"></span>
