--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<p>Join the Discussion About Human Sex-Trafficking</p>
 							<ul class="actions">
 								<li><a href="https://medium.com/@jsteck98" class="button scrolly" target="_blank">check out my medium website here</a></li>
-								<li><a href="https://www.youtube.com/watch?v=yAqW0w14hDE" class="button scrolly">Human Trafficking in Blacksburg</a></li>
+								<li><a href="https://www.youtube.com/watch?v=yAqW0w14hDE" class="button scrolly" target="_blank">Human Trafficking in Blacksburg</a></li>
 							</ul>
 						</div>
 					</section>
@@ -54,7 +54,7 @@
 									<p>We now live in simultaneous and independent realities--that of the physical world
 										and the virtual world. The new platforms of social media in sex trafficking is becoming more and more prevalent.</p>
 									<ul class="actions">
-										<li><a href="https://medium.com/@jsteck98/from-the-streets-to-social-media-667ace37f44" class="button">Click to read more</a></li>
+										<li><a href="https://medium.com/@jsteck98/from-the-streets-to-social-media-667ace37f44" class="button" target="_blank">Click to read more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -67,7 +67,7 @@
 									<p>In this blog post, I explore the risk factors that might leave certain people more prone
 										to be victimized and vulnerable to human trafficking.</p>
 									<ul class="actions">
-										<li><a href="https://medium.com/@jsteck98/poverty-and-sex-trafficking-7a4ed463bd70" class="button">Click to read more</a></li>
+										<li><a href="https://medium.com/@jsteck98/poverty-and-sex-trafficking-7a4ed463bd70" class="button" target="_blank">Click to read more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -81,7 +81,7 @@
 										Spreading false information only helps sex trafficking recruiters evade the law.
 										</p>
 									<ul class="actions">
-										<li><a href="https://medium.com/@jsteck98/check-your-sources-943b358f8893" class="button">Click to read more</a></li>
+										<li><a href="https://medium.com/@jsteck98/check-your-sources-943b358f8893" class="button" target="_blank">Click to read more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -98,13 +98,13 @@
 									<span class="icon major fa-globe"></span>
 									<h3>Hope for Justice</h3>
 									<p>Freedom, justice, empathy, and passion.</p>
-									<a href="http://hopeforjustice.org/aboutus/" class="button">Help the fight</a>
+									<a href="http://hopeforjustice.org/aboutus/" class="button" target="_blank">Help the fight</a>
 								</section>
 								<section>
 									<span class="icon major fa-sun-o"></span>
 									<h3>Podcast</h3>
 									<p>A brief discussion of sex trafficking and the struggle for justice.</p>
-									<a href="https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00" class="button">Listen Here</a>
+									<a href="https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00" class="button" target="_blank">Listen Here</a>
 								</section>
 								<section>
 									<span class="icon major fa-film"></span>
