--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									<a href="http://hopeforjustice.org/aboutus/" class="button" target="_blank">Help the fight</a>
 								</section>
 								<section>
-									<span class="icon major fa-sun-o"></span>
+									<span class="icon major fa-soundcloud"></span>
 									<h3>Podcast</h3>
 									<p>A brief discussion of sex trafficking and the struggle for justice.</p>
 									<a href="https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00" class="button" target="_blank">Listen Here</a>
