attempt to link words
linking “human trafficking”

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 								<section>
 									<span class="icon major fa-universal-access"></span>
 									<h3>National Human Trafficking Hotline</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p> <a href="https://humantraffickinghotline.org/" class="button" target="_blank" Human trafficking >/a is a form of slavery. Victims are forced to engage in commercial sex acts everyday.
+										If you or anyone you know has knowledge of a victim, please reach out to the human trafficking hotline.</p>
 								</section>
 							</div>
 
