link to medium post 4
link to medium post 4

--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 								</section>
 								<section>
 									<span class="icon major fa-film"></span>
-									<h3>Education through Film</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Modern Slavery</h3>
+									<p> <a href="https://medium.com/@jsteck98/modern-slavery-f8f80a09a5ee"> Slavery still exists today.</a>  As long as inequality exists in the world, 
+										those in power will oppress and abuse those without power.</p>
 								</section>
 								<section>
 									<span class="icon major fa-universal-access"></span>
