--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 									<a href="https://soundcloud.com/rachel-beisser/human-trafficking-in-the-age-of-the-internet-1#t=0:00" class="button" target="_blank">Listen Here</a>
 								</section>
 								<section>
-									<span class="icon major fa-film"></span>
+									<span class="icon major fa-link"></span>
 									<h3>Modern Slavery</h3>
-									<p> <a href="https://medium.com/@jsteck98/modern-slavery-f8f80a09a5ee"> Slavery still exists today.</a>  As long as inequality exists in the world, 
+									<p> <a href="https://medium.com/@jsteck98/modern-slavery-f8f80a09a5ee"> Slavery still exists today.</a>  As long as inequality exists in the world,
 										those in power will oppress and abuse those without power.</p>
 								</section>
 								<section>
