--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
 								<section>
 									<span class="icon major fa-link"></span>
 									<h3>Modern Slavery</h3>
-									<p> <a href="https://medium.com/@jsteck98/modern-slavery-f8f80a09a5ee"> Slavery still exists today.</a>  As long as inequality exists in the world,
+									<p> <a href="https://medium.com/@jsteck98/modern-slavery-f8f80a09a5ee" target="_blank"> Slavery still exists today.</a>  As long as inequality exists in the world,
 										those in power will oppress and abuse those without power.</p>
 								</section>
 								<section>
 									<span class="icon major fa-universal-access"></span>
 									<h3>National Human Trafficking Hotline</h3>
-									<p> <a href="https://humantraffickinghotline.org/"> Human trafficking </a> is a form of slavery. Victims are forced to engage in commercial sex acts everyday.
+									<p> <a href="https://humantraffickinghotline.org/" target="_blank"> Human trafficking </a> is a form of slavery. Victims are forced to engage in commercial sex acts everyday.
 										If you or anyone you know has knowledge of a victim, please reach out to the human trafficking hotline.</p>
 								</section>
 							</div>
