--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 								<section>
 									<span class="icon major fa-globe"></span>
 									<h3>Hope for Justice</h3>
-									<p>Freedom, justice, empathy, and passion.</p>
-									<a href="http://hopeforjustice.org/aboutus/" class="button" target="_blank">Help the fight</a>
+									<p>  Freedom, justice, empathy, and passion.</p>
+									 Help the fight <a href="http://hopeforjustice.org/aboutus/" target="_blank"> here.</a>
 								</section>
 								<section>
 									<span class="icon major fa-soundcloud"></span>
